--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "add": "^2.0.6",
+        "axios": "^1.5.1",
         "classnames": "^2.3.2",
         "customize-cra": "^1.0.0",
         "normalize.css": "^8.0.1",
